[package]
name = "moot"
version = "0.1.0"
edition = "2024"
description = "Decentralized social network with Tor hidden service, libp2p P2P over SOCKS5, and sway-weighted moderation"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Web framework
actix-web = "4"
actix-ws = "0.3"
actix-files = "0.6"
actix-multipart = "0.7"

# P2P networking — libp2p swarm (Kademlia + Gossipsub + Relay + dcutr)
libp2p = { version = "0.54", features = ["tcp", "tokio", "noise", "yamux", "dns", "kad", "gossipsub", "identify", "ping", "relay", "dcutr", "macros"] }
# SOCKS5 proxy support for Tor transport
tokio-socks = "0.5"

# Cryptography & identity
ed25519-dalek = "2"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
seahash = "4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

# Embedded database
sled = "0.34"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }
